[gd_scene load_steps=3 format=3 uid="uid://dlj7gq10tywq3"]

[ext_resource type="Script" uid="uid://bdjbnf4mgnjg0" path="res://components/editor_manager/editor_manager.gd" id="1_h44v6"]
[ext_resource type="PackedScene" uid="uid://dlo8rvo4a1kwy" path="res://components/code_editor/code_editor.tscn" id="2_lkyrs"]

[node name="EditorManager" type="Node"]
process_mode = 3
script = ExtResource("1_h44v6")

[node name="CodeEditorLayer" type="CanvasLayer" parent="."]
unique_name_in_owner = true
visible = false

[node name="CodeEditor" parent="CodeEditorLayer" instance=ExtResource("2_lkyrs")]
unique_name_in_owner = true

[connection signal="quit" from="CodeEditorLayer/CodeEditor" to="." method="_on_code_editor_quit"]
[connection signal="saved" from="CodeEditorLayer/CodeEditor" to="." method="_on_code_editor_saved"]
